...
                android:layout_width="150dp"
                android:layout_height="500dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pieChartSpecifyRangeOutcomes" />

            <Button
                android:id="@+id/addTransactionImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/b"
                android:drawableEnd="@drawable/addsvg"
                android:drawablePadding="10dp"
                android:padding="15dp"
...
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/transactionsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
...
